Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UCharacterMovementComponent.h

	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetUpdatedComponent(UCharacterMovementComponent* Self, USceneComponent* NewUpdatedComponent)
	{
		auto _p0 = NewUpdatedComponent;
		Self->SetUpdatedComponent(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetWalkableFloorAngle(UCharacterMovementComponent* Self, float InWalkableFloorAngle)
	{
		auto _p0 = InWalkableFloorAngle;
		Self->SetWalkableFloorAngle(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetWalkableFloorZ(UCharacterMovementComponent* Self, float InWalkableFloorZ)
	{
		auto _p0 = InWalkableFloorZ;
		Self->SetWalkableFloorZ(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldCancelAdaptiveReplication(UCharacterMovementComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->ShouldCancelAdaptiveReplication_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldCatchAir(UCharacterMovementComponent* Self, INT_PTR OldFloor, INT_PTR NewFloor)
	{
		auto _p0 = *(FFindFloorResult*)OldFloor;
		auto _p1 = *(FFindFloorResult*)NewFloor;
		return Self->ShouldCatchAir(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldCheckForValidLandingSpot(UCharacterMovementComponent* Self, float DeltaTime, INT_PTR Delta, INT_PTR Hit)
	{
		auto _p0 = DeltaTime;
		auto _p1 = *(FVector*)Delta;
		auto _p2 = *(FHitResult*)Hit;
		return Self->ShouldCheckForValidLandingSpot(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldComputePerchResult(UCharacterMovementComponent* Self, INT_PTR InHit, bool bCheckRadius)
	{
		auto _p0 = *(FHitResult*)InHit;
		auto _p1 = bCheckRadius;
		return Self->ShouldComputePerchResult(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldJumpOutOfWater(UCharacterMovementComponent* Self, INT_PTR JumpDir)
	{
		auto _p0 = *(FVector*)JumpDir;
		return Self->ShouldJumpOutOfWater(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldRemainVertical(UCharacterMovementComponent* Self)
	{
		return Self->ShouldRemainVertical();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SimulatedTick(UCharacterMovementComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SimulatedTick_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SimulateMovement(UCharacterMovementComponent* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SimulateMovement_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SlideAlongSurface(UCharacterMovementComponent* Self, INT_PTR Delta, float Time, INT_PTR Normal, INT_PTR Hit, bool bHandleImpact)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = Time;
		auto _p2 = *(FVector*)Normal;
		auto _p3 = *(FHitResult*)Hit;
		auto _p4 = bHandleImpact;
		return Self->SlideAlongSurface(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SmoothClientPosition(UCharacterMovementComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SmoothClientPosition_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SmoothClientPosition_Interpolate(UCharacterMovementComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SmoothClientPosition_Interpolate_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SmoothClientPosition_UpdateVisuals(UCharacterMovementComponent* Self)
	{
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SmoothClientPosition_UpdateVisuals_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SmoothCorrection(UCharacterMovementComponent* Self, INT_PTR OldLocation, INT_PTR OldRotation, INT_PTR NewLocation, INT_PTR NewRotation)
	{
		auto _p0 = *(FVector*)OldLocation;
		auto _p1 = *(FQuat*)OldRotation;
		auto _p2 = *(FVector*)NewLocation;
		auto _p3 = *(FQuat*)NewRotation;
		Self->SmoothCorrection(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_StartFalling(UCharacterMovementComponent* Self, int32 Iterations, float remainingTime, float timeTick, INT_PTR Delta, INT_PTR subLoc)
	{
		auto _p0 = Iterations;
		auto _p1 = remainingTime;
		auto _p2 = timeTick;
		auto _p3 = *(FVector*)Delta;
		auto _p4 = *(FVector*)subLoc;
		Self->StartFalling(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_StartNewPhysics(UCharacterMovementComponent* Self, float deltaTime, int32 Iterations)
	{
		auto _p0 = deltaTime;
		auto _p1 = Iterations;
		Self->StartNewPhysics(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_StartSwimming(UCharacterMovementComponent* Self, INT_PTR OldLocation, INT_PTR OldVelocity, float timeTick, float remainingTime, int32 Iterations)
	{
		auto _p0 = *(FVector*)OldLocation;
		auto _p1 = *(FVector*)OldVelocity;
		auto _p2 = timeTick;
		auto _p3 = remainingTime;
		auto _p4 = Iterations;
		Self->StartSwimming(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_StopActiveMovement(UCharacterMovementComponent* Self)
	{
		Self->StopActiveMovement();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_Swim(UCharacterMovementComponent* Self, INT_PTR Delta, INT_PTR Hit)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = *(FHitResult*)Hit;
		return Self->Swim(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_TickCharacterPose(UCharacterMovementComponent* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->TickCharacterPose_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_TryToLeaveNavWalking(UCharacterMovementComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->TryToLeaveNavWalking_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_TwoWallAdjust(UCharacterMovementComponent* Self, INT_PTR Delta, INT_PTR Hit, INT_PTR OldHitNormal)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = *(FHitResult*)Hit;
		auto _p2 = *(FVector*)OldHitNormal;
		Self->TwoWallAdjust(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UnCrouch(UCharacterMovementComponent* Self, bool bClientSimulation)
	{
		auto _p0 = bClientSimulation;
		Self->UnCrouch(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateBasedMovement(UCharacterMovementComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->UpdateBasedMovement(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateBasedRotation(UCharacterMovementComponent* Self, INT_PTR FinalRotation, INT_PTR ReducedRotation)
	{
		auto _p0 = *(FRotator*)FinalRotation;
		auto _p1 = *(FRotator*)ReducedRotation;
		Self->UpdateBasedRotation(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateCharacterStateAfterMovement(UCharacterMovementComponent* Self)
	{
		Self->UpdateCharacterStateAfterMovement();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateCharacterStateBeforeMovement(UCharacterMovementComponent* Self)
	{
		Self->UpdateCharacterStateBeforeMovement();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateFloorFromAdjustment(UCharacterMovementComponent* Self)
	{
		Self->UpdateFloorFromAdjustment();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateFromCompressedFlags(UCharacterMovementComponent* Self, uint8 Flags)
	{
		auto _p0 = Flags;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->UpdateFromCompressedFlags_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_VisualizeMovement(UCharacterMovementComponent* Self)
	{
		Self->VisualizeMovement();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_AddInputVector(UCharacterMovementComponent* Self, INT_PTR WorldVector, bool bForce)
	{
		auto _p0 = *(FVector*)WorldVector;
		auto _p1 = bForce;
		Self->AddInputVector(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ConsumeInputVector(UCharacterMovementComponent* Self)
	{
		return (INT_PTR) new FVector(Self->ConsumeInputVector());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsMoveInputIgnored(UCharacterMovementComponent* Self)
	{
		return Self->IsMoveInputIgnored();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetActorFeetLocationBased(UCharacterMovementComponent* Self)
	{
		return (INT_PTR) new FBasedPosition(Self->GetActorFeetLocationBased());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_StopMovementImmediately(UCharacterMovementComponent* Self)
	{
		Self->StopMovementImmediately();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ConstrainDirectionToPlane(UCharacterMovementComponent* Self, INT_PTR Direction)
	{
		auto _p0 = *(FVector*)Direction;
		return (INT_PTR) new FVector(Self->ConstrainDirectionToPlane(_p0));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ConstrainLocationToPlane(UCharacterMovementComponent* Self, INT_PTR Location)
	{
		auto _p0 = *(FVector*)Location;
		return (INT_PTR) new FVector(Self->ConstrainLocationToPlane(_p0));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ConstrainNormalToPlane(UCharacterMovementComponent* Self, INT_PTR Normal)
	{
		auto _p0 = *(FVector*)Normal;
		return (INT_PTR) new FVector(Self->ConstrainNormalToPlane(_p0));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMaxSpeedModifier(UCharacterMovementComponent* Self)
	{
		return Self->GetMaxSpeedModifier();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetModifiedMaxSpeed(UCharacterMovementComponent* Self)
	{
		return Self->GetModifiedMaxSpeed();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_InitializeComponent(UCharacterMovementComponent* Self)
	{
		Self->InitializeComponent();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsExceedingMaxSpeed(UCharacterMovementComponent* Self, float MaxSpeed)
	{
		auto _p0 = MaxSpeed;
		return Self->IsExceedingMaxSpeed(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsInWater(UCharacterMovementComponent* Self)
	{
		return Self->IsInWater();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_GetMaxSpeedModifier(UCharacterMovementComponent* Self)
	{
		return Self->K2_GetMaxSpeedModifier();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_GetModifiedMaxSpeed(UCharacterMovementComponent* Self)
	{
		return Self->K2_GetModifiedMaxSpeed();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_MoveUpdatedComponentImpl(UCharacterMovementComponent* Self, INT_PTR Delta, INT_PTR NewRotation, bool bSweep, INT_PTR OutHit, ETeleportType Teleport)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = *(FQuat*)NewRotation;
		auto _p2 = bSweep;
		auto _p3 = (FHitResult*)OutHit;
		auto _p4 = Teleport;
		return ((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->MoveUpdatedComponentImpl_WRAP(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetPlaneConstraintAxisSetting(UCharacterMovementComponent* Self, EPlaneConstraintAxisSetting NewAxisSetting)
	{
		auto _p0 = NewAxisSetting;
		Self->SetPlaneConstraintAxisSetting(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetPlaneConstraintEnabled(UCharacterMovementComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetPlaneConstraintEnabled(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetPlaneConstraintFromVectors(UCharacterMovementComponent* Self, INT_PTR Forward, INT_PTR Up)
	{
		auto _p0 = *(FVector*)Forward;
		auto _p1 = *(FVector*)Up;
		Self->SetPlaneConstraintFromVectors(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetPlaneConstraintNormal(UCharacterMovementComponent* Self, INT_PTR PlaneNormal)
	{
		auto _p0 = *(FVector*)PlaneNormal;
		Self->SetPlaneConstraintNormal(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetPlaneConstraintOrigin(UCharacterMovementComponent* Self, INT_PTR PlaneOrigin)
	{
		auto _p0 = *(FVector*)PlaneOrigin;
		Self->SetPlaneConstraintOrigin(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldSkipUpdate(UCharacterMovementComponent* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		return Self->ShouldSkipUpdate(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SnapUpdatedComponentToPlane(UCharacterMovementComponent* Self)
	{
		Self->SnapUpdatedComponentToPlane();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateComponentVelocity(UCharacterMovementComponent* Self)
	{
		Self->UpdateComponentVelocity();
	}